створення сторінки студія

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
      <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <!--Шапка-->
             <a  class="link" href=""> WebStudio</a>
             <ul class="list">
-              <li class="nav-list"><a    href="./studio.html"> Студія  </a> </li>
-              <li class="nav-list" > <a    href="./portfolio.html"> Портфоліо  </a> </li>
-              <li  class="nav-list"><a    href="" >Контакти</a>   </li>
+              <li class="nav-list"><a  class="link-list"  href="./studio.html"> Студія  </a> </li>
+              <li class="nav-list" > <a class="link-list"   href="./portfolio.html"> Портфоліо  </a> </li>
+              <li  class="nav-list"><a class="link-list"   href="" >Контакти</a>   </li>
             </ul>
         </nav>
         <ul class="list">
-             <li class="mail"> <a   href="mailto:info@devstudio.com "> info@devstudio.com </a></li>
-             <li class="contact-number">  <a    href="tel:380961111111"> +38 096 111 11 11 </a> </li>
+             <li class="mail"> <a  class="link-list" href="mailto:info@devstudio.com "> info@devstudio.com </a></li>
+             <li class="contact-number">  <a  class="link-list"  href="tel:380961111111"> +38 096 111 11 11 </a> </li>
            
         </ul>
     </header>
@@ -33,7 +33,7 @@
     
 <!--Заголовок-->
 
-    <section>
+    <section class="men-title"> 
         <h1 class="title">Ефективні рішення для
             <p>вашого бізнесу</p> </h1>
         <button  class="button-service"    type="button">Замовити послугу</button>
