--- a/portfolio.html
+++ b/portfolio.html
@@ -21,14 +21,14 @@
             <!--Шапка-->
             <a class="link" href=""> WebStudio</a>
             <ul class="list">
-                <li class="nav-list"><a  href="./studio.html"> Студія </a> </li>
-                <li class="nav-list"> <a   href="./portfolio.html"> Портфоліо </a> </li>
-                <li class="nav-list"><a    href="">Контакти</a> </li>
+                <li class="nav-list"><a class="link-list" href="./studio.html"> Студія </a> </li>
+                <li class="nav-list"> <a class="link-list"  href="./portfolio.html"> Портфоліо </a> </li>
+                <li class="nav-list"><a class="link-list"href="">Контакти</a> </li>
             </ul>
         </nav>
         <ul class="list">
-            <li class="mail"> <a   href="mailto:info@devstudio.com "> info@devstudio.com </a></li>
-            <li class="contact-number"> <a   href="tel:380961111111"> +38 096 111 11 11 </a> </li>
+            <li class="mail"> <a class="link-list"   href="mailto:info@devstudio.com "> info@devstudio.com </a></li>
+            <li class="contact-number"> <a  class="link-list"  href="tel:380961111111"> +38 096 111 11 11 </a> </li>
 
         </ul>
     </header>
@@ -37,7 +37,7 @@
     <section>
         <h1> Порфоліо</h1>
         <ul class="list" >
-            <li><button  type="button">Всі</button></li>
+            <li><button type="button">Всі</button></li>
             <li> <button type="button">Веб-сайти</button></li>
             <li> <button type="button">Додатки</button></li>
             <li> <button type="button">Дизайн</button></li>
