--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <header>
         <nav>
             <!--Шапка-->
-            <a class="link" href=""> WebStudio</a>
+            <a class="link-logo" href=""> Web Studio</a>
             <ul class="list">
                 <li class="nav-list"><a class="link-list" href="./studio.html"> Студія </a> </li>
                 <li class="nav-list"> <a class="link-list"  href="./portfolio.html"> Портфоліо </a> </li>
@@ -37,11 +37,11 @@
     <section>
         <h1> Порфоліо</h1>
         <ul class="list" >
-            <li><button type="button">Всі</button></li>
-            <li> <button type="button">Веб-сайти</button></li>
-            <li> <button type="button">Додатки</button></li>
-            <li> <button type="button">Дизайн</button></li>
-            <li> <button type="button">Маркетинг</button></li>
+            <li><button type="button" class="list-button">Всі</button></li>
+            <li> <button type="button"class="list-button">Веб-сайти</button></li>
+            <li> <button type="button" class="list-button" >Додатки</button></li>
+            <li> <button type="button" class="list-button">Дизайн</button></li>
+            <li> <button type="button"class="list-button">Маркетинг</button></li>
         </ul>
         
         <ul class="list">
@@ -88,7 +88,7 @@
       
      <!--Pidval-->
     <footer>
-       <a href=""> WebStudio</a>
+       <a class="link-logo" href=""> Web Studio</a>
        <address class="address-nov">
         м. Київ, пр-т Лесі Українки, 26
         <a    href="mailto:info@devstudio.com "> info@devstudio.com </a>
