--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <nav>
             <!--Шапка-->
-            <a  class="link" href=""> WebStudio</a>
+            <a  class="link-logo" href=""> Web Studio</a>
             <ul class="list">
               <li class="nav-list"><a  class="link-list"  href="./studio.html"> Студія  </a> </li>
               <li class="nav-list" > <a class="link-list"   href="./portfolio.html"> Портфоліо  </a> </li>
@@ -36,7 +36,7 @@
     <section class="men-title"> 
         <h1 class="title">Ефективні рішення для
             <p>вашого бізнесу</p> </h1>
-        <button  class="button-service"    type="button">Замовити послугу</button>
+        <button   type="button" class="button-service">Замовити послугу</button>
     </section>
     
 
@@ -45,20 +45,20 @@
 <!--Послуги-->
      <ul class="list">
         <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3> 
+            <h3 class="list-title">УВАГА ДО ДЕТАЛЕЙ</h3> 
              <p class="list-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
 
         <li>
-             <h3>ПУНКТУАЛЬНІСТЬ</h3>
+             <h3 class="list-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="list-text"> Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li>
-             <h3>ПЛАНУВАННЯ</h3>
+             <h3 class="list-title">ПЛАНУВАННЯ</h3>
               <p class="list-text">Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
          <li>
-             <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+             <h3 class="list-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
              <p class="list-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
     </ul>
@@ -76,7 +76,7 @@
      </section>
 
 <!--Gomanda-->
-     <section>
+     <section class="tem">
           <h2 class="work" >Наша команда</h2>
             <ul class="list">   
                 <li > <img src="./images/img1.jpg" alt="дизайнер компанії" width="270">
@@ -101,7 +101,7 @@
      
     <!--Pidval-->
     <footer>
-        <a href=""> WebStudio</a>
+        <a class="link-logo" href=""> Web Studio</a>
          <address class="address-nov">
          м. Київ, пр-т Лесі Українки, 26 
         <a   href="mailto:info@devstudio.com "> info@devstudio.com </a>  
