робота над стилями

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <header class="header">
         <nav>
             <!--Шапка-->
-            <a  class="link-logo" href=""> Web Studio</a>
+            <a  class="link-logo" href=""> Web<span class="port">Studio</span> </a>
             <ul class="list">
-              <li class="nav-list"><a  class="link-list"  href="./studio.html"> Студія  </a> </li>
+              <li class="nav-list"><a  class="link-list current"  href="./studio.html"> Студія  </a> </li>
               <li class="nav-list" > <a class="link-list"   href="./portfolio.html"> Портфоліо  </a> </li>
-              <li  class="nav-list"><a class="link-list"   href="" >Контакти</a>   </li>
+              <li  class="nav-list"><a class="link-list "   href="" >Контакти</a>   </li>
             </ul>
         </nav>
         <ul class="list">
@@ -32,7 +32,6 @@
 
     
 <!--Заголовок-->
-
     <section class="men-title"> 
         <h1 class="title">Ефективні рішення для
             <p>вашого бізнесу</p> </h1>
@@ -101,11 +100,11 @@
      
     <!--Pidval-->
     <footer>
-        <a class="link-logo" href=""> Web Studio</a>
+        <a class="link-logo" href=""> Web<span class="port-footer">Studio</span></a>
          <address class="address-nov">
          м. Київ, пр-т Лесі Українки, 26 
-        <a   href="mailto:info@devstudio.com "> info@devstudio.com </a>  
-        <a   href="tel:380961111111">  +38 096 111 11 11 </a> 
+        <a  class="adress-link" href="mailto:info@devstudio.com "> info@devstudio.com </a>  
+        <a class="adress-link"  href="tel:380961111111">  +38 096 111 11 11 </a> 
          </address>
      </footer>
 </body>
