--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,10 @@
     <header>
         <nav>
             <!--Шапка-->
-            <a class="link-logo" href=""> Web Studio</a>
+            <a class="link-logo" href=""> Web<span class="port">Studio</span> </a>
             <ul class="list">
                 <li class="nav-list"><a class="link-list" href="./studio.html"> Студія </a> </li>
-                <li class="nav-list"> <a class="link-list"  href="./portfolio.html"> Портфоліо </a> </li>
+                <li class="nav-list"> <a class="link-list current"  href="./portfolio.html"> Портфоліо </a> </li>
                 <li class="nav-list"><a class="link-list"href="">Контакти</a> </li>
             </ul>
         </nav>
@@ -37,7 +37,7 @@
     <section>
         <h1> Порфоліо</h1>
         <ul class="list" >
-            <li><button type="button" class="list-button">Всі</button></li>
+            <li><button type="button" class="list-button ">Всі</button></li>
             <li> <button type="button"class="list-button">Веб-сайти</button></li>
             <li> <button type="button" class="list-button" >Додатки</button></li>
             <li> <button type="button" class="list-button">Дизайн</button></li>
@@ -88,11 +88,11 @@
       
      <!--Pidval-->
     <footer>
-       <a class="link-logo" href=""> Web Studio</a>
+       <a class="link-logo" href=""> Web<span class="port-footer">Studio</span></a>
        <address class="address-nov">
         м. Київ, пр-т Лесі Українки, 26
-        <a    href="mailto:info@devstudio.com "> info@devstudio.com </a>
-        <a     href="tel:380961111111"> +38 096 111 11 11 </a>
+        <a  class="adress-link"  href="mailto:info@devstudio.com "> info@devstudio.com </a>
+        <a  class="adress-link"   href="tel:380961111111"> +38 096 111 11 11 </a>
         </address>
     </footer>
 </body>
