--- a/studio.html
+++ b/studio.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="header">
-        <nav>
+        <nav class="nav-main">
             <!--Шапка-->
             <a  class="link-logo" href=""> Web<span class="port">Studio</span> </a>
             <ul class="list">
@@ -66,9 +66,9 @@
     <section>
           <h2 class="work">Чим ми займаємося</h2>
           <ul class="list">  
-            <li><img src="./images/box1.jpg" alt="створення сайту" width="370"> </li>    
-            <li> <img src="./images/box2.jpg" alt="тестування на мобільних пристроях"  width="370">   </li>
-            <li><img src="./images/box3.jpg" alt="вибір кольорової гами " width="370"></li>
+            <li  list-img><img src="./images/box1.jpg" alt="створення сайту" width="370"> </li>    
+            <li  list-img> <img src="./images/box2.jpg" alt="тестування на мобільних пристроях"  width="370">   </li>
+            <li list-img ><img src="./images/box3.jpg" alt="вибір кольорової гами " width="370"></li>
           </ul>
      </section>
 
